--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
     "copy-webpack-plugin": "^11.0.0",
     "css-loader": "^6.7.3",
     "html-webpack-plugin": "^5.5.1",
+    "node-sass": "^8.0.0",
+    "sass-loader": "^13.2.2",
     "style-loader": "^3.3.2",
     "webpack": "^5.80.0",
     "webpack-cli": "^5.0.1",
