--- a/package.json
+++ b/package.json
@@ -9,5 +9,8 @@
     "webpack": "^5.80.0",
     "webpack-cli": "^5.0.1",
     "webpack-dev-server": "^4.13.3"
+  },
+  "dependencies": {
+    "panzoom": "^9.4.3"
   }
 }
